<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_above="@id/register_layout">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:id="@+id/register_layout">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/baseEditText"
            android:drawableRight="@drawable/ic_77_essential_icons_user"
            android:id="@+id/et_register_user_name"
            android:hint="@string/user_name">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/baseEditText"
            android:id="@+id/et_register_password"
            android:drawableRight="@drawable/ic_lock_white_24dp"
            android:hint="@string/user_pass">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/baseEditText"
            android:id="@+id/et_register_password_check"
            android:drawableRight="@drawable/ic_lock_white_24dp"
            android:hint="@string/user_pass_check">
        </EditText>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/bt_register"
            style="@style/baseButton"
            android:text="@string/sign_up"></Button>
    </LinearLayout>
</RelativeLayout>