<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in_name"
        android:gravity="center"
        android:layout_marginBottom="100dp"
        android:layout_above="@id/login_layout">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:id="@+id/login_layout">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/et_login_user_name"
            android:drawableRight="@drawable/ic_77_essential_icons_user"
            style="@style/baseEditText"
            android:hint="@string/user_name">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/et_login_password"
            android:drawableRight="@drawable/ic_lock_white_24dp"
            style="@style/baseEditText"
            android:hint="@string/user_pass">
        </EditText>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/baseButton"
            android:id="@+id/bt_login"
            android:text="@string/log_in"></Button>
    </LinearLayout>

</RelativeLayout>